tools/flowc/tests/errors/error43.flow
// Flowc compiles this file correctly, while Flow gives type error.

// [Material Guidelines | Typography Styles](https://www.google.com/design/spec/style/typography.html#typography-styles)
	MFontStyle ::= MDisplay2, MDisplay1, MDisplay1Medium, MHeadline, MSubheading, MTitle, MBody, MListBody, MBodyBold, MCaption,
			MButtonStyle, MSecondaryButtonStyle,
			// Custom styles
			MCaptionSolid, MCaptionColumn, MCaptionColumnSelected, MDataRow, MTooltipDesktop, MCustomFont;

		MDisplay2(); /*FontSize(45.0), FontFamily("Roboto"), FillOpacity(0.54)*/
		MDisplay1(); /*FontSize(34.0), FontFamily("Roboto"), FillOpacity(0.54)*/
		MDisplay1Medium(); /*FontSize(34.0), FontFamily("RobotoMedium"), FillOpacity(0.54)*/
		MHeadline(); /*FontSize(24.0), FontFamily("Roboto"), FillOpacity(0.87)*/
		MSubheading(); /*FontSize(16.0), FontFamily("Roboto"), FillOpacity(0.87)*/
		MTitle(); /*FontSize(20.0), FontFamily("Roboto"), FillOpacity(0.87)*/
		MBody(); /*FontSize(14.0), FontFamily("Roboto"), FillOpacity(0.87)*/
		MListBody(); /*FontSize(14.0), FontFamily("Roboto"), FillOpacity(0.54)*/
		MBodyBold(); /*FontSize(14.0), FontFamily("RobotoMedium"), FillOpacity(0.87)*/
		MCaption(); /*FontSize(12.0), FontFamily("Roboto"), FillOpacity(0.54)*/
		MButtonStyle(); /*FontSize(14.0), FontFamily("RobotoMedium"), FillOpacity(0.87)*/
		MSecondaryButtonStyle(); /*FontSize(14.0), FontFamily("RobotoMedium"), FillOpacity(0.54)*/

		MCaptionSolid(); /*FontSize(12.0), FontFamily("Roboto"), FillOpacity(0.87)*/
		MCaptionColumn(); /*FontSize(12.0), FontFamily("RobotoMedium"), FillOpacity(0.54)*/
		MCaptionColumnSelected(); /*FontSize(12.0), FontFamily("RobotoMedium"), FillOpacity(0.87)*/
		MDataRow(); /*FontSize(13.0), FontFamily("Roboto"), FillOpacity(0.87)*/
		MTooltipDesktop(); /*FontSize(12.0), FontFamily("RobotoMedium"), FillOpacity(0.87)*/
		MCustomFont(size : double, family : string, opacity : double);


scaleSkinFont(fs : MFontStyle, ratio : double) -> MFontStyle {
	MCustomFont(fs.size * ratio, fs.family, fs.opacity)
}

main() {
	m : MFontStyle = MCustomFont(0.0, "", 0.0);
	scaleSkinFont(m, 1.0);
}